datasets/dataset_txt/compose/compose_542.txt
singhaniashrinkhala commented on 7 Aug 2018 •
edited
On running the command
docker-compose -f docker-compose.yml up -d
I get the following error:
Traceback (most recent call last):
  File "/usr/bin/docker-compose", line 7, in <module>
    from compose.cli.main import main
  File "/usr/lib/python2.6/site-packages/compose/cli/main.py", line 16, in <module>
    from ..config import ConfigurationError
  File "/usr/lib/python2.6/site-packages/compose/config/__init__.py", line 2, in <module>
    from .config import ConfigurationError
  File "/usr/lib/python2.6/site-packages/compose/config/config.py", line 236
    for name in all_service_names
      ^
SyntaxError: invalid syntax
make: *** [start] Error 1
Versions:
Docker version 1.7.1, build 786b29d/1.7.1

$pip show docker-compose
DEPRECATION: Python 2.6 is no longer supported by the Python core team, please upgrade your Python. A future version of pip will drop support for Python 2.6
Name: docker-compose
Version: 1.5.2
Summary: Multi-container orchestration for Docker
Home-page: https://www.docker.com/
Author: Docker, Inc.
Author-email: UNKNOWN
License: Apache License 2.0
Location: /usr/lib/python2.6/site-packages
Requires: docker-py, dockerpty, jsonschema, texttable, six, enum34, websocket-client, PyYAML, docopt, requests
You are using pip version 9.0.1, however version 18.0 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
The system has python 2.7 running by default. Not sure why it its taking python 2.6